--- a/PetaFF/PetaFF/Views/Articles/CatLitterTraining.cshtml
+++ b/PetaFF/PetaFF/Views/Articles/CatLitterTraining.cshtml
@@ -9,8 +9,7 @@
                 <h1 class="article-title">Как приучить кошку к лотку</h1>
                 
                 <div class="article-meta mb-4">
-                    <span><i class="far fa-clock"></i> 10 минут на чтение</span>
-                    <span class="ms-3"><i class="fas fa-tag"></i> Кошки</span>
+                    <span><i class="fas fa-tag"></i> Кошки</span>
                 </div>
 
                 <div class="article-content">
