--- a/PetaFF/PetaFF/Views/Articles/Index.cshtml
+++ b/PetaFF/PetaFF/Views/Articles/Index.cshtml
@@ -15,8 +15,7 @@
                     <div class="article-content">
                         <h3>Основы ухода за щенком</h3>
                         <p class="article-meta">
-                            <i class="far fa-clock"></i> 15 минут на чтение
-                            <span class="ms-3"><i class="fas fa-tag"></i> Собаки</span>
+                            <i class="fas fa-tag"></i> Собаки
                         </p>
                         <p class="article-preview">
                             Первые месяцы жизни щенка - самые важные для формирования его характера и привычек. 
@@ -33,8 +32,7 @@
                     <div class="article-content">
                         <h3>Как приучить кошку к лотку</h3>
                         <p class="article-meta">
-                            <i class="far fa-clock"></i> 10 минут на чтение
-                            <span class="ms-3"><i class="fas fa-tag"></i> Кошки</span>
+                            <i class="fas fa-tag"></i> Кошки
                         </p>
                         <p class="article-preview">
                             Правильное приучение кошки к лотку - залог чистоты в доме и комфорта питомца. 
@@ -51,8 +49,7 @@
                     <div class="article-content">
                         <h3>Здоровье питомца: профилактика и уход</h3>
                         <p class="article-meta">
-                            <i class="far fa-clock"></i> 20 минут на чтение
-                            <span class="ms-3"><i class="fas fa-tag"></i> Здоровье</span>
+                            <i class="fas fa-tag"></i> Здоровье
                         </p>
                         <p class="article-preview">
                             Регулярные осмотры, вакцинация и правильное питание - основа здоровья вашего питомца. 
@@ -69,8 +66,7 @@
                     <div class="article-content">
                         <h3>Обустройство дома для питомца</h3>
                         <p class="article-meta">
-                            <i class="far fa-clock"></i> 12 минут на чтение
-                            <span class="ms-3"><i class="fas fa-tag"></i> Уход</span>
+                            <i class="fas fa-tag"></i> Уход
                         </p>
                         <p class="article-preview">
                             Создание безопасного и комфортного пространства для питомца - важная задача каждого хозяина. 
