--- a/PetaFF/PetaFF/Views/Articles/PetHealth.cshtml
+++ b/PetaFF/PetaFF/Views/Articles/PetHealth.cshtml
@@ -9,8 +9,7 @@
                 <h1 class="article-title">Здоровье питомца: профилактика и уход</h1>
                 
                 <div class="article-meta mb-4">
-                    <span><i class="far fa-clock"></i> 12 минут на чтение</span>
-                    <span class="ms-3"><i class="fas fa-tag"></i> Здоровье</span>
+                    <span><i class="fas fa-tag"></i> Здоровье</span>
                 </div>
 
                 <div class="article-content">
