--- a/PetaFF/PetaFF/Views/Games/PetCareQuiz.cshtml
+++ b/PetaFF/PetaFF/Views/Games/PetCareQuiz.cshtml
@@ -16,7 +16,7 @@
             <div class="card-body">
                 <h5 id="question-text" class="card-title mb-4"></h5>
                 <div id="answers-container" class="list-group">
-                    <!-- Ответы будут добавлены через JavaScript -->
+                    
                 </div>
             </div>
         </div>
@@ -183,7 +183,7 @@
         }
         
         .progress-bar {
-            background-color: #3498db;
+            background-color: #0a1a15;
             transition: width 0.3s ease;
         }
     </style>
