--- a/PetaFF/PetaFF/Views/Games/PetFacts.cshtml
+++ b/PetaFF/PetaFF/Views/Games/PetFacts.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-8 mx-auto">
             <div class="card-facts-container">
-                <!-- Карточки будут добавлены через JavaScript -->
+              
             </div>
         </div>
     </div>
@@ -143,12 +143,12 @@
         }
         
         .fact-card-front {
-            background-color: #3498db;
+            background-color: #0a1a15;
             color: white;
         }
         
         .fact-card-back {
-            background-color: #2ecc71;
+            background-color: #1a2c25;
             color: white;
             transform: rotateY(180deg);
         }
