--- a/PetaFF/PetaFF/Views/Map/Discovery.cshtml
+++ b/PetaFF/PetaFF/Views/Map/Discovery.cshtml
@@ -6,7 +6,7 @@
 
 <style>
     h2, .modal-title {
-        color: #222 !important;
+        color: white !important;
         font-weight: bold !important;
         text-shadow: 0 1px 2px #fff, 0 0 1px #ccc;
     }
@@ -83,7 +83,7 @@
                         </div>
                     </form>
                     <div id="adsList" class="row">
-                        <!-- Здесь будут отображаться объявления -->
+                       
                     </div>
                 </div>
             </div>
